# sure-newsletter

./: .gitignore  DEPLOYMENT_CHECKLIST.md  README.md  SECRETS.md  app.py  config.py  email_service.py  migrate_to_supabase.py  pyproject.toml  requirements.txt  seed_issues.py  supabase_db.py  supabase_schema.sql
.github/: copilot-instructions.md
.github/workflows/: ci.yml  keep-alive.yml
.streamlit/: config.toml
